[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/RoundSummary/RoundSummary.gd" type="Script" id=1]
[ext_resource path="res://Scenes/RoundSummary/DataEntry.tscn" type="PackedScene" id=2]
[ext_resource path="res://Textures/summary_bg.png" type="Texture" id=3]

[node name="RoundSummary" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ClipboardTexture" type="TextureRect" parent="."]
margin_left = 400.0
margin_top = 40.0
margin_right = 880.0
margin_bottom = 680.0
rect_min_size = Vector2( 480, 640 )
texture = ExtResource( 3 )

[node name="HBox" type="HBoxContainer" parent="ClipboardTexture"]
margin_left = 56.0
margin_top = 54.0
margin_right = 480.0
margin_bottom = 640.0
alignment = 1

[node name="VBox" type="VBoxContainer" parent="ClipboardTexture/HBox"]
margin_right = 424.0
margin_bottom = 586.0

[node name="ScoreGrandTotal" parent="ClipboardTexture/HBox/VBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 424.0
margin_bottom = 30.0

[node name="TotalBlockNumberPlaced" parent="ClipboardTexture/HBox/VBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 34.0
margin_right = 424.0
margin_bottom = 64.0

[node name="TimeBonusMultiplier" parent="ClipboardTexture/HBox/VBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 68.0
margin_right = 424.0
margin_bottom = 98.0

[node name="TotalScoreForFilledSpaces" parent="ClipboardTexture/HBox/VBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 102.0
margin_right = 424.0
margin_bottom = 132.0

[node name="DataEntry5" parent="ClipboardTexture/HBox/VBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 136.0
margin_right = 424.0
margin_bottom = 166.0

[node name="DataEntry6" parent="ClipboardTexture/HBox/VBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 170.0
margin_right = 424.0
margin_bottom = 200.0

[node name="DataEntry7" parent="ClipboardTexture/HBox/VBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 424.0
margin_bottom = 234.0

[node name="DataEntry8" parent="ClipboardTexture/HBox/VBox" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 238.0
margin_right = 424.0
margin_bottom = 268.0
